--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@material-ui/core": "^4.6.0",
+    "@material-ui/icons": "^4.5.1",
     "@material/chips": "^4.0.0",
     "axios": "^0.19.0",
     "react": "^16.11.0",
