--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material/chips": "^4.0.0",
     "axios": "^0.19.0",
+    "cors": "^2.8.5",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
