--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.7.8"
+    "modules": "^0.4.0",
+    "mongoose": "^5.7.8",
+    "react": "^16.12.0",
+    "yarn": "^1.19.2"
   }
 }
