--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "refuge-resource",
   "version": "1.0.0",
+  "engines": {
+    "npm": "6.9.0"
+  },
   "description": "A page to help people find resources after natural disasters.",
   "main": "server.js",
   "repository": "https://github.com/Zevubu/refuge-resource.git",
@@ -23,6 +26,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "modules": "^0.4.0",
