--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-images-upload": "^1.2.7",
     "react-mailto": "^0.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0"
