--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "cloudinary": "^1.17.0",
+    "cloudinary-core": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
