--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "modules": "^0.4.0",
     "mongoose": "^5.7.8",
     "react": "^16.12.0",
+    "react-protected-mailto": "^1.0.3",
     "yarn": "^1.19.2"
   }
 }
